# Compress-Aware-Pruing

./: .gitattributes  .gitignore  README.md  experiment_plan_compression_aware_safety.md  pyproject.toml  sitecustomize.py
configs/: base.yaml  method_a2.yaml  method_b.yaml  method_c.yaml  method_d.yaml
data/: build_refusal_sft.py  manifest.json
docs/: closed_form_readout_repair_spec.md  experiment_path_theory_handoff.md  experiment_record_2026-06-27.md  mechanism_seal_spec.md  paper_core_narrative_and_theory.md  phase1_spec.md  spec_a_margin_calibration.md  theory_hardening_specs.md
scripts/: bashrc_capenv_snippet.sh  download_phase0_assets.py  install_missing_packages.sh  phase0_advbench_guard_grid.sh  phase0_advbench_smoke.sh  phase0_env_and_manifest.sh  phase0_full_download.sh  phase0_smoke_eval.sh  phase0_wikitext_ppl_grid.sh  phase15_causal_bridge.sh  phase15_causal_bridge_merge.sh  phase15_causal_bridge_parallel.sh  phase15_closed_form_readout_repair.sh  phase15_closed_form_readout_repair_cell_parallel.sh  phase15_closed_form_readout_repair_parallel.sh  phase15_margin_calibration.sh  phase15_margin_calibration_merge.sh  phase15_margin_calibration_parallel.sh  phase15_mechanism_seal_residual_merge.sh  phase15_mechanism_seal_residual_sweep.sh  phase15_mechanism_seal_specificity.sh  phase15_step0_restore_s.sh  phase15_step0b_merge.sh  phase15_step0b_parallel.sh  phase15_step0b_restore_s.sh  phase15_theory_mismatch.sh  phase15_vpref_projection.sh  phase1_crit_v2.sh  phase1_followup_diagnostics.sh  phase1_ppl_v2.sh  phase1_vpref.sh  phase2_frontier_run.sh  (+6 more)
(+31 files in other folders)
